# sonarr-mcp

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml
.github/workflows/: test.yml
scripts/: smoke_test.py
src/sonarr_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
src/sonarr_mcp/tools/: __init__.py  calendar.py  commands.py  episodes.py  history.py  imports.py  queue.py  series.py  system.py
tests/: conftest.py  test_client.py  test_config.py  test_get_stuck_imports.py  test_imports_pure.py
